examples/fail/parser/bad_cast_syntax.bina
// EXPECT_PARSER_ERROR: expected '>' after cast type
fn main() -> int {
    let x = cast<int32(1);
    return 0;
}
